# RoboArmAI

./: .gitignore
3DModel/my_robot/: model.config  model.sdf
3DModel/servo_connection_bracket/: model.config  model.sdf
3DModel/servo_connection_pipe/: model.config  model.sdf
3DModel/servo_double_joint/: model.config  model.sdf
3DModel/servo_single_joint/: model.config  model.sdf
3DModel/simple_gripper/: model.config  model.sdf
3DModel/simple_servo/: model.config  model.sdf
Controller/GazeboPlugin/: CMakeLists.txt  make.sh  pos.cpp  roboarm_plugin.cpp  roboarm_plugin.h  run.sh
Controller/ROS/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Controller/ROS/devel/lib/controller/: joint_controller  joint_controller.py
Controller/ROS/devel/lib/joint_controller/: joint_controller  joint_controller.py
Controller/ROS/devel/lib/pkgconfig/: controller.pc  embedded.pc  joint_controller.pc  robo_arm_controller.pc  vision.pc
Controller/ROS/devel/lib/robo_arm_controller/: joint_controller  joint_controller.py
Controller/ROS/src/controller/: CMakeLists.txt  package.xml
Controller/ROS/src/controller/scripts/: joint_controller.py  robot_kinematics.py  six_dof_kinematics.py  unit_tests.py
Controller/ROS/src/controller/src/: joint_controller.cpp
Controller/ROS/src/embedded/: CMakeLists.txt  package.xml
Controller/ROS/src/robo_arm_controller/: CMakeLists.txt  package.xml
Controller/ROS/src/vision/: package.xml
ROScontrol/roboarm_gazebo_plugin/: CMakeLists.txt  roboarm.world  roboarm_plugin.cpp
Tools/: inv_kine.m  robo_arm.m
(+8 files in other folders)
